# shapedescriptors

./: ProjectHome.md
dday/: BlobDemo4.cpp  Makefile  Makefile.linux  Makefile.osx  blob_demo.cpp  blob_filter.cpp  blob_filter.h  blobs.h  correlation.h  data_types.h  post_process.cpp  post_process.h  tagger.sh  window.cpp  window.h
experiments/: 1dfft.cpp  complex.cpp  function.cpp  makefile
thesis/: Makefile.am  base.h  beta.cpp  clean.sh  comp.sh  configure.ac  contour.cpp  contour.h  descriptors.cpp  descriptors.h  makefile  maker.sh  output.cpp  output.h  svn-ignore  vision.h
thesis/src/: adaptors.h  base.h  beta.cpp  ccomplex.h  contour.cpp  contour.h  descriptors.cpp  descriptors.h  fourier.h  mcomplex.h  output.cpp  output.h  seq.h  vision.h  window.h
thesis/utest/: aux_test.cpp  circle.h  fft_test.cpp  square.h
